--- a/index.css
+++ b/index.css
@@ -1,36 +1,153 @@
-body {
-    background-color: rgb(55, 55, 56);
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html,body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Roboto Condensed', sans-serif;
+    letter-spacing : 2px;
+    background-color: #000;
+}
+
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
     height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-start; /* Align items at the top */
-    overflow: hidden; /* Hide overflowing content */
-    position: relative; /* Set position to relative to make absolute positioning work correctly */
-    font-size: 50px;
+    align-items: center;
+    width: 100%;
+    min-height: 100%;
+    margin: 0 auto;
+    padding: 50px;
 }
 
-.title {
-    color: white;
+.btn {
+    position: relative;
+    display: inline-block;
+    width: auto;
+    line-height: 3;
+    text-align: center;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.40rem;
+    font-weight: bold;
+    background: transparent;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    user-select: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+
+.btn:hover {
+    color: #fff;
+    letter-spacing: 2px;
+    transform: translateY(5px);
+}
+
+.btn1::before,
+.btn1::after,
+.btn1 span::before,
+.btn1 span::after {
+    content: '';
     position: absolute;
+    transition: all 0.4s ease;
+    background-color: #ffffff;
+}
+
+.btn1::before {
+    height: 2px;
+    width: 0;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    left: 0;
+    transition-delay: 0.2s;
 }
 
-.normal {
-    color: white;
-    position: absolute;
-    top: 200px; /* Adjust this value as needed */
-    left: 20%;
-    transform: translateX(-50%);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
+.btn1::after {
+    width: 2px;
+    height: 0;
+    top: 0;
+    right: 0;
+    transition-delay: 0.2s;
 }
 
-.normal a {
-    color: white; /* Change link color to white */
-    text-decoration: underline; /* Remove underline */
+.btn1 span::before {
+    height: 2px;
+    width: 0;
+    bottom: 0;
+    right: 0;
+    transition-delay: 0.2s;
+}
+
+.btn1 span::after {
+    width: 2px;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    transition-delay: 0.2s;
+}
+
+.btn1:hover::before {
+    width: 100%;
+    transition-delay: 0.2s;
+}
+
+.btn1:hover::after {
+    height: 100%;
+    transition-delay: 0.2s;
+}
+
+.btn1:hover span::before {
+    width: 100%;
+    transition-delay: 0.2s;
+}
+
+.btn1:hover span::after {
+    height: 100%;
+    transition-delay: 0.2s;
+}
+
+
+.fa-discord-alt {
+    color: #ffffff;
+    font-size: 40px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    bottom: 12px;
+    right: 43px;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+    color: #ffffff;
 }
